--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,6 @@ before_build:
   - nuget restore Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln
 build_script:
   - choco install "msbuild-sonarqube-runner" -y
-  - MSBuild.SonarQube.Runner.exe begin /k:"Tradeticker" /d:"sonar.host.url=https://sonarqube.com" /d:"sonar.login=[SonarCloudToken]"
+  - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=[SonarCloudToken]
   - msbuild "Temporary_TradeTicker_Placeholder.sln"
   - MSBuild.SonarQube.Runner.exe end /d:"sonar.login=[SonarCloudToken]"
