--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,19 @@ environment:
 before_build:
   - nuget restore Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln
 build_script:
-  - choco install "msbuild-sonarqube-runner" -y
-  - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=%sonarlogin% /o:edwinvr-github /v:"%appveyor_build_version%
+#  - choco install "msbuild-sonarqube-runner" -y
+#  - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=%sonarlogin% /o:edwinvr-github /v:"%appveyor_build_version%
   - msbuild "Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln"
-  - MSBuild.SonarQube.Runner.exe end /d:sonar.login=%sonarlogin%
+#  - MSBuild.SonarQube.Runner.exe end /d:sonar.login=%sonarlogin%
+deploy:
+  release: myproduct-v$(appveyor_build_version)
+  description: 'Release description'
+  provider: GitHub
+  auth_token:
+    secure: SY+6iEMqUlbzMcvBp6VHamJCMs7sMLTFYy1BLHvsDT12GxTQxrmZRvxuLKxW+9Aq # your encrypted token from GitHub
+  artifact: /.*\.nupkg/            # upload all NuGet packages to release assets
+  draft: false
+  prerelease: false
+  on:
+    branch: hello-world                 # release from master branch only
+    appveyor_repo_tag: true        # deploy on tag push only
