--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,4 +19,4 @@ deploy:
   prerelease: false
   on:
     branch: hello-world                 # release from master branch only
-    appveyor_repo_tag: true        # deploy on tag push only
+    appveyor_repo_tag: false        # deploy on tag push only
