--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,13 +8,15 @@ build_script:
 #  - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=%sonarlogin% /o:edwinvr-github /v:"%appveyor_build_version%
   - msbuild "Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln"
 #  - MSBuild.SonarQube.Runner.exe end /d:sonar.login=%sonarlogin%
+artifacts:
+  - path: bin\Debug\*.exe
+    name: tradeticker
 deploy:
   release: myproduct-v$(appveyor_build_version)
   description: 'Release description'
   provider: GitHub
   auth_token:
     secure: SY+6iEMqUlbzMcvBp6VHamJCMs7sMLTFYy1BLHvsDT12GxTQxrmZRvxuLKxW+9Aq # your encrypted token from GitHub
-  artifact: /interop-.*\.zip/,/.*\.exe/,/.*\.nupkg          # upload all NuGet packages to release assets
   draft: false
   prerelease: false
   on:
