--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
   sonarlogin:
     secure: sao5EE3hl2It2xv4colifAIVz134RLHv1yYijwuacL2uF2evx8F5p3P2SNZC6Lm4
 before_build:
-  - nuget restore Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln
+ - nuget restore Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln
 assembly_info:
   patch: true
   file: '**\AssemblyInfo.*'
@@ -10,16 +10,15 @@ assembly_info:
   assembly_file_version: '$(appveyor_build_version)'
   assembly_informational_version: '$(appveyor_build_version)'
 build_script:
-#  - choco install "msbuild-sonarqube-runner" -y
-#  - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=%sonarlogin% /o:edwinvr-github /v:"%appveyor_build_version%
-  - msbuild "Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln"
-#  - MSBuild.SonarQube.Runner.exe end /d:sonar.login=%sonarlogin%
+# - choco install "msbuild-sonarqube-runner" -y
+# - MSBuild.SonarQube.Runner.exe begin /k:Tradeticker /d:sonar.host.url=https://sonarqube.com /d:sonar.login=%sonarlogin% /o:edwinvr-github /v:"%appveyor_build_version%
+ - msbuild "Temporary_TradeTicker_Placeholder\Temporary_TradeTicker_Placeholder.sln" /p:Configuration=Release
+# - MSBuild.SonarQube.Runner.exe end /d:sonar.login=%sonarlogin%
 artifacts:
-  - path: Temporary_TradeTicker_Placeholder\bin\Debug\*.exe
+  - path: Temporary_TradeTicker_Placeholder\bin\Release\*.exe
     name: mybuild
 deploy:
-  release: myproduct-v$(appveyor_build_version)
-  description: 'Release description'
+  release: Tradeticker-v$(appveyor_build_version)
   provider: GitHub
   artifact: mybuild
   auth_token:
@@ -27,5 +26,5 @@ deploy:
   draft: false
   prerelease: false
   on:
-    branch: hello-world                 # release from master branch only
+    branch: hello-world		    # release from master branch only
     appveyor_repo_tag: false        # deploy on tag push only
