--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,5 +26,5 @@ deploy:
   draft: false
   prerelease: false
   on:
-    branch: hello-world		    # release from master branch only
+    branch: main		    # release from master branch only
     appveyor_repo_tag: false        # deploy on tag push only
